; ModuleID = '/home/carl/AnghaBench/openpilot/phonelibs/json/src/extr_json.c_emit_value_indented.c'
source_filename = "/home/carl/AnghaBench/openpilot/phonelibs/json/src/extr_json.c_emit_value_indented.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i32, i32, i32 }

@.str = private unnamed_addr constant [5 x i8] c"null\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"true\00", align 1
@.str.2 = private unnamed_addr constant [6 x i8] c"false\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @emit_value_indented(i32* %0, %struct.TYPE_5__* %1, i8* %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_5__*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store %struct.TYPE_5__* %1, %struct.TYPE_5__** %6, align 8
  store i8* %2, i8** %7, align 8
  store i32 %3, i32* %8, align 4
  %9 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %10 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @tag_is_valid(i32 %11)
  %13 = call i32 @assert(i32 %12)
  %14 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %15 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  switch i32 %16, label %53 [
    i32 131, label %17
    i32 132, label %20
    i32 128, label %29
    i32 130, label %35
    i32 133, label %41
    i32 129, label %47
  ]

17:                                               ; preds = %4
  %18 = load i32*, i32** %5, align 8
  %19 = call i32 @sb_puts(i32* %18, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  br label %55

20:                                               ; preds = %4
  %21 = load i32*, i32** %5, align 8
  %22 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %23 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %22, i32 0, i32 3
  %24 = load i32, i32* %23, align 4
  %25 = icmp ne i32 %24, 0
  %26 = zext i1 %25 to i64
  %27 = select i1 %25, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.2, i64 0, i64 0)
  %28 = call i32 @sb_puts(i32* %21, i8* %27)
  br label %55

29:                                               ; preds = %4
  %30 = load i32*, i32** %5, align 8
  %31 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %32 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %31, i32 0, i32 2
  %33 = load i32, i32* %32, align 4
  %34 = call i32 @emit_string(i32* %30, i32 %33)
  br label %55

35:                                               ; preds = %4
  %36 = load i32*, i32** %5, align 8
  %37 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %38 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %37, i32 0, i32 1
  %39 = load i32, i32* %38, align 4
  %40 = call i32 @emit_number(i32* %36, i32 %39)
  br label %55

41:                                               ; preds = %4
  %42 = load i32*, i32** %5, align 8
  %43 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %44 = load i8*, i8** %7, align 8
  %45 = load i32, i32* %8, align 4
  %46 = call i32 @emit_array_indented(i32* %42, %struct.TYPE_5__* %43, i8* %44, i32 %45)
  br label %55

47:                                               ; preds = %4
  %48 = load i32*, i32** %5, align 8
  %49 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %50 = load i8*, i8** %7, align 8
  %51 = load i32, i32* %8, align 4
  %52 = call i32 @emit_object_indented(i32* %48, %struct.TYPE_5__* %49, i8* %50, i32 %51)
  br label %55

53:                                               ; preds = %4
  %54 = call i32 @assert(i32 0)
  br label %55

55:                                               ; preds = %53, %47, %41, %35, %29, %20, %17
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @tag_is_valid(i32) #1

declare dso_local i32 @sb_puts(i32*, i8*) #1

declare dso_local i32 @emit_string(i32*, i32) #1

declare dso_local i32 @emit_number(i32*, i32) #1

declare dso_local i32 @emit_array_indented(i32*, %struct.TYPE_5__*, i8*, i32) #1

declare dso_local i32 @emit_object_indented(i32*, %struct.TYPE_5__*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
